logs/mallet.log
Listing '.'...
Listing './bin'...
Compiling './bin/mallet-add-client.py'...
***   File "./bin/mallet-add-client.py", line 38
    print 'Please choose a UNIX password for the "%s" user' % name
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mallet-build-image.py'...
***   File "./bin/mallet-build-image.py", line 43
    print """
Usage: %s --target=<directory> --install=<compontent1,component2>

Target is the destination directory where you want to create the host image.

Install is a comma-separated list of software componenents to install.  Choices
are: %s

Other (optional) parameters are:

    -d, --distribution=<distribution>
        The distribution is any valid Debian distribution supported by your
        copy of debootstrap; the default is 'lenny'.

    -h, --hostname=<hostname
        The hostname to set in the target; the default is 'mallet'.

    -m, --mirror=<mirror>
        The mirror is the actual URL to a Debian mirror near you.

    -l, --locales=<locale1,locale2>
        Locales is a comma-separated list of locales you want to generate on
        the host image; the default is 'en_US.UTF-8'.
""" % (sys.argv[0], ', '.join(shortcuts))
             
                                                                 

                                                                            

                                                                               
       

                                

                                     
                                                                           
                                                    

                            
                                                                   

                         
                                                                 

                                   
                                                                            
                                                     
  ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mallet-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/mallet'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
